--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
+    "bulma": "^0.7.1",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.15.2",
     "cors": "^2.8.3",
